# sandtrace

./: .env.example  .gitignore  Cargo.toml  README.md  setup-bare-metal.sh  test-firecracker-e2e.sh
crates/audit-chain/: Cargo.toml
crates/audit-chain/src/: lib.rs
crates/capture/: Cargo.toml
crates/capture/src/: filesystem.rs  lib.rs  network.rs  packet.rs  syscall.rs  tap.rs
crates/cli/: Cargo.toml
crates/cli/src/: demo.rs  main.rs  pretty.rs
crates/output/: Cargo.toml
crates/output/src/: filter.rs  lib.rs  sink.rs  validate.rs
crates/policy/: Cargo.toml
crates/policy/src/: engine.rs  lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: blaxel.rs  daytona.rs  detect.rs  e2b.rs  firecracker.rs  lib.rs  snapshot.rs
demo-agent/: agent.py  injections.py  requirements.txt
docs/: cli-reference.md  event-schema.md  getting-started.md  policy-manifest.md  provider-setup.md  verifying-audit-trails.md
schema/: event.json  policy.yaml
tests/: e2e-watch.sh
