[package]
name = "sandtrace-audit-chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
