[package]
name = "sandtrace-output"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSONL event output pipeline with filtering, validation, and multi-target streaming"

[dependencies]
sandtrace-audit-chain = { path = "../audit-chain" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
