[package]
name = "sandtrace-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
serde_json.workspace = true

sandtrace-audit-chain = { path = "../audit-chain" }
