[package]
name = "sandtrace-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

sandtrace-capture = { path = "../capture" }

[target.'cfg(target_os = "linux")'.dependencies]
inotify.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3"
